# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/: audit-on-push.yml  general.yml  scheduled-audit.yml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230210172400_create_subscriptions_table.sql  20230221160114_add_status_to_subscriptions.sql  20230310112126_seed_user.sql  20230310200601_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscription.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscription.rs  subscription_confirm.rs  subscriptions.rs
