[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
cargo-audit = "0.17.4"
serde = {version ="1.0.152", features=["derive"] }
tokio = "1.25.0"
config = "0.11"
[dependencies.sqlx]
version="0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.11.14"
