[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3", features=["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
secrecy = {version = "0.8", features=["serde"]}
once_cell = "1.17.0"
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"


[dev-dependencies]
reqwest = "0.11.14"
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
