[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3", features=["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
secrecy = {version = "0.8", features=["serde"]}
once_cell = "1.17.0"
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
reqwest = {version ="0.11.14", default-features=false, features=["json", "rustls-tls", "cookies"]}
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
serde_json = "1.0.93"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.38"
anyhow = "1.0.69"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2.1.2"
htmlescape = "0.3.1"
sha2 = "0.10.6"
hmac = { version = "0.12.1", features = ["std"] }
hex = "0.4.3"
actix-session = {version ="0.7.2", features=["redis-rs-session"]}

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
linkify = "0.8"
